[package]
name = "polymesh"
version = "6.1.0"
authors = ["PolymeshAssociation"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "polymesh"
path = "src/main.rs"

# Path build to use our Substrate version from github, `branch = "develop"`.
[patch.crates-io]
frame-benchmarking = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
frame-benchmarking-cli = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
frame-executive = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
frame-support = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
frame-election-provider-support = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
frame-system = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
frame-system-benchmarking = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
frame-system-rpc-runtime-api = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-authority-discovery = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-authorship = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-babe = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-balances = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-contracts = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-contracts-primitives = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-grandpa = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-im-online = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-indices = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-offences = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-preimage = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-scheduler = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-session = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-staking-reward-curve = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-timestamp = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
pallet-treasury = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-authority-discovery = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-basic-authorship = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-block-builder = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-chain-spec = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-cli = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-client-api = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-client-db = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-consensus = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-consensus-babe = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-consensus-babe-rpc = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-consensus-epochs = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-consensus-slots = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-executor = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-consensus-grandpa = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-consensus-grandpa-rpc = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-keystore = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-network = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-network-common = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-rpc = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-rpc-api = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-rpc-spec-v2 = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-service = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-telemetry = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-transaction-pool = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-transaction-pool-api = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sc-sync-state-rpc = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-api = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-application-crypto = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-arithmetic = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-authority-discovery = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-block-builder = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-blockchain = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-consensus = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-consensus-babe = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-consensus-slots = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-core = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-externalities = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-consensus-grandpa = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-inherents = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-io = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-keystore = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-keyring = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-npos-elections = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-offchain = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-rpc = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-runtime = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-weights = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-runtime-interface = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-session = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-staking = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-state-machine = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-std = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-storage = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-timestamp = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-tracing = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-transaction-pool = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-transaction-storage-proof = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-trie = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
sp-version = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
substrate-frame-rpc-system = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
substrate-state-trie-migration-rpc = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
substrate-prometheus-endpoint = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
substrate-build-script-utils = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }
substrate-wasm-builder = { git = "https://github.com/PolymeshAssociation/substrate", branch = "polymesh-v6-monthly-2023-03-update-deps" }

[workspace]
members = [
    "bin/bench",
    "bin/testing",
    "node-rpc",
    "pallets/asset",
    "pallets/balances",
    "pallets/base",
    "pallets/bridge",
    "pallets/committee",
    "pallets/common",
    "pallets/compliance-manager",
    "pallets/contracts",
    "pallets/corporate-actions",
    "pallets/external-agents",
    "pallets/group",
    "pallets/group/rpc",
    "pallets/group/rpc/runtime-api",
    "pallets/identity",
    "pallets/multisig",
    "pallets/nft",
    "pallets/pips",
    "pallets/protocol-fee",
    "pallets/protocol-fee/rpc",
    "pallets/protocol-fee/rpc/runtime-api",
    "pallets/relayer",
    "pallets/runtime/common",
    "pallets/runtime/develop",
    "pallets/runtime/mainnet",
    "pallets/runtime/testnet",
    "pallets/runtime/tests",
    "pallets/runtime/tests/exec_macro",
    "pallets/settlement",
    "pallets/staking",
    "pallets/staking/rpc",
    "pallets/staking/rpc/runtime-api",
    "pallets/statistics",
    "pallets/sto",
    "pallets/transaction-payment",
    "pallets/treasury",
    "pallets/utility",
    "pallets/test-utils",
    "pallets/weights",
    "primitives",
    "primitives/asset-metadata",
    "rpc",
    "rpc/runtime-api",
    "utils/permissions",
]
exclude = [
    "contracts",
    "integration"
]

[dependencies]
pallet-asset = { path = "pallets/asset" }
pallet-balances = { path = "pallets/balances", default-features = false  }
pallet-bridge = { path = "pallets/bridge", default-features = false }
pallet-committee = { path = "pallets/committee", default-features = false }
pallet-corporate-actions = { path = "pallets/corporate-actions", default-features = false }
pallet-external-agents = { path = "pallets/external-agents", default-features = false }
pallet-group = { path = "pallets/group", default-features = false }
pallet-identity = { path = "pallets/identity", default-features = false }
pallet-multisig = { path = "pallets/multisig", default-features = false }
pallet-pips = { path = "pallets/pips", default-features = false }
pallet-protocol-fee = { path = "pallets/protocol-fee", default-features = false }
pallet-staking = { path = "pallets/staking", default-features = false }
pallet-sudo = { path = "pallets/sudo", default-features = false }
polymesh-contracts = { path = "pallets/contracts", default-features = false }
polymesh-common-utilities = { path = "pallets/common", default-features = false }
polymesh-primitives = { path = "primitives", default-features = false }
polymesh-runtime-common = { path = "pallets/runtime/common", default-features = false }

# RPC
node-rpc = { path = "rpc" }
node-rpc-runtime-api = { path = "rpc/runtime-api" }
pallet-group-rpc = { path = "pallets/group/rpc" }
pallet-group-rpc-runtime-api = { path = "pallets/group/rpc/runtime-api" }
pallet-protocol-fee-rpc = { path = "pallets/protocol-fee/rpc" }
pallet-protocol-fee-rpc-runtime-api = { path = "pallets/protocol-fee/rpc/runtime-api" }
pallet-staking-rpc-runtime-api = { path = "pallets/staking/rpc/runtime-api" }
polymesh-node-rpc = { path = "node-rpc" }

# Runtimes
polymesh-runtime-develop = { path = "pallets/runtime/develop" }
polymesh-runtime-mainnet = { path = "pallets/runtime/mainnet" }
polymesh-runtime-testnet = { path = "pallets/runtime/testnet" }

# General
chrono = { version = "0.4", default-features = false }
futures = "0.3.21"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4.17"
serde = { version = "1.0.136", default-features = false }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
clap = { version = "4.0.9", features = ["derive"] }
rustc-hex = "2.1.0"

# Pin version to work around substrate logging issue.
tracing-core = "0.1.30"

# Substrate
codec = { version = "3.0.0", package = "parity-scale-codec" }
frame-support = "4.0.0-dev"
frame-system = "4.0.0-dev"
frame-system-rpc-runtime-api = "4.0.0-dev"
grandpa = { package = "sc-consensus-grandpa", version = "0.10.0-dev" }
pallet-babe = "4.0.0-dev"
pallet-im-online = "4.0.0-dev"
pallet-indices = "4.0.0-dev"
pallet-session = "4.0.0-dev"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev" }
sc-authority-discovery = "0.10.0-dev"
sc-basic-authorship = "0.10.0-dev"
sc-chain-spec = "4.0.0-dev"
sc-cli = { version = "0.10.0-dev" }
sc-client-api = "4.0.0-dev"
sc-client-db = { version = "0.10.0-dev", default-features = false }
sc-consensus = "0.10.0-dev"
sc-consensus-babe = "0.10.0-dev"
sc-consensus-slots = "0.10.0-dev"
sc-executor = { version = "0.10.0-dev" }
sc-network = "0.10.0-dev"
sc-network-common = { version = "0.10.0-dev" }
sc-rpc = "4.0.0-dev"
sc-service = { version = "0.10.0-dev" }
sc-telemetry = "4.0.0-dev"
sc-transaction-pool = "4.0.0-dev"
sc-sync-state-rpc = { version = "0.10.0-dev" }
sp-api = "4.0.0-dev"
sp-authority-discovery = "4.0.0-dev"
sp-block-builder = "4.0.0-dev"
sp-blockchain = "4.0.0-dev"
sp-consensus = "0.10.0-dev"
sp-consensus-babe = "0.10.0-dev"
sp-consensus-slots = "0.10.0-dev"
sp-keyring = { version = "7.0.0" }
sp-core = "7.0.0"
sp-inherents = "4.0.0-dev"
sp-transaction-storage-proof = "4.0.0-dev"
sp-offchain = "4.0.0-dev"
sp-runtime = "7.0.0"
sp-timestamp = "4.0.0-dev"
sp-session = "4.0.0-dev"
sp-transaction-pool = { version = "4.0.0-dev" }

# These dependencies are used for runtime benchmarking
frame-benchmarking = "4.0.0-dev"
frame-benchmarking-cli = "4.0.0-dev"

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0" }

[features]
default = ["std"]
running-ci = [ "polymesh-runtime-develop/running-ci" ]
default_identity = [ "polymesh-common-utilities/default_identity" ]
runtime-benchmarks = [
    "sc-client-db/runtime-benchmarks",
    "polymesh-runtime-develop/runtime-benchmarks",
]

# Only build a "ci" runtime.
ci-runtime = [ "polymesh-runtime-develop/ci-runtime" ]

std = [
    "polymesh-common-utilities/std",
    "serde/std"
]
